# itrs

./: Cargo.toml  README.md
src/: itrs.rs  lib.rs  wrap.rs
src/itrs/: it_fn.rs  peek.rs
